# ecdaa-erlang

./: .gitignore  Makefile  README.md  rebar.config
c_src/: CMakeLists.txt  Makefile  ecdaa.c
priv/test_data/TPM/: handle.txt  pub_key.txt
src/: ecdaa.app.src  ecdaa.erl  ecdaa_erlang.app.src
test/: ecdaa_test.erl
